--- a/views/index.haml
+++ b/views/index.haml
@@ -3,9 +3,9 @@
 .row
   %ul.list-unstyled
     -@images.each do |image|
-      %li
+      %li.col-md-4
         %h2=image.title
-        %img{src: image.file, width: "100%"}
+        %img{src: image.file.url(:small), width: "100%"}
 
 %h1 Upload new image
 
