Added social media share buttons.

--- a/views/index.haml
+++ b/views/index.haml
@@ -5,8 +5,12 @@
     -@images.each do |image|
       %li.col-md-4
         %h2=image.title
-        %a{href: image.file, data: { lightbox: "gallery", title: image.title } }
-          %img{src: image.file.url(:small), width: "100%"}
+        %p
+          %a{href: image.file, data: { lightbox: "gallery", title: image.title } }
+            %img{src: image.file.url(:small), width: "100%"}
+        %p
+          %span(class='st_facebook_vcount' displayText='Facebook' st_url="#{request.base_url}/images/#{image.id}")
+          %span(class='st_twitter_vcount' displayText='Tweet' st_url="#{request.base_url}/images/#{image.id}")
 
 %h1 Upload new image
 
