--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,3 +11,6 @@
       =yield
 
     %script(src="/js/lightbox.js")
+    %script(src="http://w.sharethis.com/button/buttons.js")
+    :javascript
+      stLight.options({publisher: "0c141c98-1c3d-4657-b70b-f5bc9337e504", doNotHash: false, doNotCopy: false, hashAddressBar: false});
