--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
     %meta(charset="utf-8")
     %link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
     %link(rel="stylesheet" href="/css/lightbox.css")
-    %link(rel="stylesheet" href="/css/app.css")
+    %link(rel="stylesheet" href="/css/main.css")
     %script(src="https://code.jquery.com/jquery-2.1.4.min.js")
     %script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
   %body
